[gd_scene load_steps=20 format=3 uid="uid://besym8haj5qo4"]

[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="1_xhmi2"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Crosshair.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d35qxiccrmjj3" path="res://Textures/UI/crosshair/crosshair.png" id="2_s7cg1"]
[ext_resource type="Texture2D" uid="uid://dn576br5tkdbc" path="res://Textures/Interactions/interaction_invalid.png" id="3_3nihr"]
[ext_resource type="Texture2D" uid="uid://dujsq82ocy6bp" path="res://Textures/Interactions/Interaction.png" id="4_gqw8w"]
[ext_resource type="Texture2D" uid="uid://cb746tuycm36s" path="res://Textures/Interactions/dot.png" id="5_86dyc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_722ac"]
shader = ExtResource("1_xhmi2")

[sub_resource type="AtlasTexture" id="AtlasTexture_txv08"]
atlas = ExtResource("2_s7cg1")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip048"]
atlas = ExtResource("2_s7cg1")
region = Rect2(10, 0, 10, 10)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txv08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip048")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="1"]
radius = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j3sol"]
atlas = ExtResource("3_3nihr")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ej1"]
atlas = ExtResource("3_3nihr")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6hhu"]
atlas = ExtResource("4_gqw8w")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vdvp"]
atlas = ExtResource("4_gqw8w")
region = Rect2(10, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_e54ij"]
animations = [{
"frames": [],
"loop": true,
"name": &"New Anim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3sol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ej1")
}],
"loop": true,
"name": &"invalid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6hhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vdvp")
}],
"loop": true,
"name": &"valid",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("5_86dyc")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("5_86dyc")
region = Rect2(12, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_7frv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Crosshair" type="Node2D"]
material = SubResource("ShaderMaterial_722ac")
script = ExtResource("2")
grid_size = 16
grid_margin = 16

[node name="IdleCrosshair" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("3")

[node name="CrosshairArea" type="Area2D" parent="."]
collision_layer = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrosshairArea"]
shape = SubResource("1")

[node name="InteractionCrosshair" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_e54ij")
animation = &"valid"

[node name="InteractionDot" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 4
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_7frv0")
